[package]
name = "cornell-mcray"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dolly = "0.1.3"
fastrand = "1.4"
kajiya = { git = "https://github.com/expenses/kajiya/", rev = "0ceb4fe21a162414f8b67b370b7b9c3edc56a1aa", default-features = false }
kajiya-simple = { git = "https://github.com/expenses/kajiya/", rev = "0ceb4fe21a162414f8b67b370b7b9c3edc56a1aa", default-features = false }
macaw = "0.15.0"
physx = { git = "https://github.com/EmbarkStudios/physx-rs.git", rev = "b6146ef" }
physx-sys = { git = "https://github.com/EmbarkStudios/physx-rs.git", rev = "b6146ef" }
serde = { version = "1.0", features = ["derive"] }
slotmap = "1.0"
structopt = "0.3"

[features]
dlss = ["kajiya/dlss"]

[profile.release]
debug = true
lto = false

[profile.release.package.physx-sys]
debug = false

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
